fix mobile layout issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
   background: black;
   padding-top: 80px;
   overflow-y: scroll;
-overflow-x: hidden;
+  overflow-x: hidden;
 
   .board,
   #first-vid-trigger,
@@ -29,12 +29,7 @@ overflow-x: hidden;
     width: 90%;
     padding-top: 10%;
   }
-  .pc{
-    display: initial;
-  }
-  .mobile{
-    display: none;
-  }
+  
   .chip-video {
     opacity: 0;
     width: 80%;
@@ -162,7 +157,9 @@ overflow-x: hidden;
     height: 100vh;
     width: 100vw;
     display: flex;
-    justify-content: flex-end;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-end;
     padding: 112px;
     color: #f8f8f8;
     font-family: Orbitron;
@@ -171,10 +168,10 @@ overflow-x: hidden;
     font-weight: 800;
     line-height: 73px;
     letter-spacing: -1.386px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
     padding-top: 20%;
-    transform: translateY(10%);
+    .randomize-text-wrapper {
+      width: auto;
+    }
   }
 
   .board4 {
@@ -590,15 +587,7 @@ overflow-x: hidden;
   }
 }
 @media screen and (max-width: 1000px) {
-  .home {
-
-
-    .pc{
-      display: none;
-    }
-    .mobile{
-      display: initial;
-    }
+  .home {  
 
     .title {
       h2 {
@@ -641,6 +630,7 @@ overflow-x: hidden;
     }
     .board2 {
       flex-direction: column;
+      width: 100vh;
       .board2_items {
         display: flex;
         justify-content: center;
@@ -679,8 +669,11 @@ overflow-x: hidden;
       }
     }
     .board3 {
- 
+      padding: 1.5rem;
       justify-content: center;
+      font-size: 1.8rem;
+      line-height: 3rem;
+      text-align: center;
     }
     .board4 {
       .mainImg {
@@ -786,7 +779,7 @@ overflow-x: hidden;
       margin: 2.75rem 1.5rem;
       transform: translateX(-5%);
       .tokenomics-wrapper {
-        gap:2.5rem;
+        gap: 2.5rem;
         .tokenomics {
           grid-template-columns: 1fr;
           width: 100%;
